--- a/roles/zbx-proxy/tasks/RedHat.yml
+++ b/roles/zbx-proxy/tasks/RedHat.yml
@@ -70,7 +70,7 @@
   with_items:
     - zabbix-proxy-{{ zabbix_proxy_database }}
     - zabbix-agent
-  when: zabbix_version <= 5.0
+  when: zabbix_version is version_compare('5.0', '==')
 
 - name: Update Zabbix packages
   yum:
@@ -80,13 +80,13 @@
   with_items:
     - zabbix-proxy-{{ zabbix_proxy_database }}
     - zabbix-agent
-  when: zabbix_version >= 5.4
+  when: zabbix_version is version_compare('5.4', '>=')
 
 - name: Install zabbix-scripts >= 5.4
   yum:
     name: zabbix-sql-scripts
     state: present
-  when: zabbix_version >= 5.4
+  when: zabbix_version is version_compare('5.4', '>=')
 
 - name: Copy zabbix_proxy.conf template
   template:
