fix: ajuste repo

--- a/roles/zbx-proxy/tasks/main.yml
+++ b/roles/zbx-proxy/tasks/main.yml
@@ -6,7 +6,7 @@
   when: ansible_distribution_file_variety == 'Debian'
 
 - name: "Installing the database"
-  include: "sqlite3.yml"
+  include_tasks: "sqlite3.yml"
   when: zabbix_proxy_database == 'sqlite3'
 
 - name: Restart zabbix-proxy
