--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: all
   vars:
-    zabbix_proxy_database: sqlite3
-    zabbix_version: 5.0
+    zabbix_proxy_database: mysql
+    zabbix_version: 7.0
   roles:
     - zbx-proxy
   become: true
